--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
 
     <title>{% block title %}{% endblock title %}</title>
   </head>
+  {% block CSSBlock %}
+  <link rel="stylesheet" href="/static/css/stylebase.css"> 
+  {% endblock CSSBlock %}
   <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container m-0">
@@ -145,7 +148,6 @@
 </div>
 {% block body %}
 {% endblock body %}
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
