--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,14 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock title %} 
 {% block homeactive%}active{% endblock homeactive%}
+{% block CSSBlock %}
+<link rel="stylesheet" href="/static/css/stylehome.css">
+{% endblock CSSBlock %}
 {% block body %}
 
 <div class="container">
   <div class="jumbotron jumbotron-fluid">
     <h1 class="display-4">मैफलीत माझ्या..</h1>
     <p class="lead">
-      This is a modified jumbotron that occupies the entire horizontal space of
-      its parent.
+    <div class="Engintro">
+      First of all, Let me tell u one thing...
+      When I decided to create a blog for my Gazals and Poems, I had just one thing in my mind..
+    </div>
+    <div class="marintro">
+      कदम बढते है तो फासले भी कम होते होंगे |
+      उम्मीद का दिया जलता है तो हौसले भी बढते होंगे |
+      आज इस समंदर मी अपना नाम नाही तो क्या हुआ,
+      कल के शबनम पार अपने भी नाम खिलते होंगे |
+    </div>
     </p>
     {% for post in post %}
     <div class="row">
@@ -18,25 +29,10 @@
           <p class="card-text">{{post.postContent}}</p>
           {% if user.is_authenticated %}
           <a href="/blog/{{post.postSlug}}" class="btn btn-outline-success"
-            >Continue Reading</a
-          >
+            >Continue Reading</a>
           {% else %}
-          <button
-            type="button"
-            class="btn btn-outline-success mr-2"
-            data-toggle="modal"
-            data-target="#loginModal"
-          >
-            Login
-          </button>
-          <button
-            type="button"
-            class="btn btn-outline-success"
-            data-toggle="modal"
-            data-target="#signupModal"
-          >
-            Signup
-          </button>
+          <a href="/blog/{{post.postSlug}}" class="btn btn-outline-success disabled"
+            >Login or Signup</a>
           {% endif %}
         </div>
       </div>
@@ -44,5 +40,5 @@
     {% endfor %}
   </div>
 </div>
-<hr />
+<hr>
 {% endblock body %}
